Fix counter border color of high contrast

--- a/app/javascript/styles/contrast/diff.scss
+++ b/app/javascript/styles/contrast/diff.scss
@@ -71,3 +71,7 @@
 .nothing-here {
   color: $darker-text-color;
 }
+
+.public-layout .public-account-header__tabs__tabs .counter.active::after {
+  border-bottom: 4px solid $ui-highlight-color;
+}
